@@ -1,5 +1,13 @@
 2017-10-09  John Baldwin  <jhb@FreeBSD.org>
 
+	* Makefile.in (ALLDEPFILES): Add arm-fbsd-nat.c.
+	* NEWS: Mention new FreeBSD/arm native configuration.
+	* configure.host: Add arm*-*-freebsd*.
+	* configure.nat: Likewise.
+	* arm-fbsd-nat.c: New file.
+
+2017-10-09  John Baldwin  <jhb@FreeBSD.org>
+
 	* Makefile.in (ALL_TARGET_OBS): Add arm-fbsd-tdep.o.
 	(ALLDEPFILES): Add arm-fbsd-tdep.c.
 	* NEWS: Mention new FreeBSD/arm target.
